content/vault/v1.21.x/content/docs/deploy/kubernetes/csi/installation.mdx
---
layout: docs
page_title: Install the Vault Secrets Store CSI provider
description: Install the Vault Secrets Store CSI provider using Vault Helm.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-22T12:58:23-07:00
last_modified: 2025-10-22T13:53:42-07:00
# END AUTO GENERATED METADATA
---

# Install the Vault Secrets Store CSI provider

## Prerequisites

- Kubernetes 1.16+ for both the master and worker nodes (Linux-only)
- [Secrets Store CSI driver](https://secrets-store-csi-driver.sigs.k8s.io/getting-started/installation.html) installed.
- `TokenRequest` endpoint available, which requires setting the flags
  `--service-account-signing-key-file` and `--service-account-issuer` for
  `kube-apiserver`. Set by default from 1.20+ and earlier in most managed services.

## Installation using Helm

The [Vault Helm chart](/vault/docs/platform/k8s/helm) is the recommended way to
install and configure the Vault Secrets Store CSI provider in Kubernetes.

To install a new instance of Vault and the Vault Secrets Store CSI provider, first add the
HashiCorp helm repository and ensure you have access to the chart:

~> **Note:** Vault Secrets Store CSI provider Helm installation requires Vault Helm 0.10.0+.

@include 'helm/repo.mdx'

Then install the chart and enable the CSI feature by setting the
`csi.enabled` value to `true`:

~> **Note:** this will also install the Vault server and Agent Injector.

```shell-session
$ helm install vault hashicorp/vault --set="csi.enabled=true"
```

Upgrades may be performed with `helm upgrade` on an existing installation. Please
always run Helm with `--dry-run` before any install or upgrade to verify
changes.

You can see all the available values settings by running `helm inspect values hashicorp/vault` or by reading the [Vault Helm Configuration
Docs](/vault/docs/platform/k8s/helm/configuration). Commonly used values in the Helm
chart include limiting the namespaces the Vault Secrets Store CSI provider runs in, TLS options and
more.

## Installation on OpenShift

Run the Red Hat certified Vault Secrets Store CSI provider on an OpenShift
cluster.

### Prerequisites

- OpenShift 4.14+
- You must have the [Secrets Store CSI driver operator](https://docs.redhat.com/en/documentation/openshift_container_platform/4.19/html/storage/using-container-storage-interface-csi#persistent-storage-csi-secrets-store-driver-install_persistent-storage-csi-secrets-store)
  from Red Hat installed.
- You must have a `ClusterCSIDriver` instance for `secrets-store.csi.k8s.io` created.

### Install using Helm

You must add the Vault Secrets Store CSI provider service account to the
`privileged`
[security context constraint](https://cloud.redhat.com/blog/managing-sccs-in-openshift)
in OpenShift to grant the Vault Secrets Store CSI provider `hostPath` mount
access.

```shell-session
$ oc adm policy add-scc-to-user privileged \
    -z vault-csi-provider                  \
    -n ${KUBERNETES_VAULT_NAMESPACE}
```

Install the CSI provider from the OpenShift helm chart repository:

```shell-session
$ helm repo add openshift-helm-charts https://charts.openshift.io/
```

```shell-session
$ helm repo update
```

```shell-session
$ helm install vault openshift-helm-charts/vault \
    --namespace ${KUBERNETES_VAULT_NAMESPACE}    \
    --set="csi.enabled=true"
```
